# urban-flood-modeling

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.dvc/: config
configs/: infer.yaml  train.yaml
configs/data/: default.yaml
configs/dvc/: default.yaml
configs/inference/: default.yaml
configs/logging/: default.yaml  infer.yaml  train.yaml
configs/model/: default.yaml
configs/postprocessing/: default.yaml
configs/preprocessing/: default.yaml
configs/training/: default.yaml
data/: .gitignore  1d2d_connections.csv.dvc  1d_edge_index.csv.dvc  1d_edges_dynamic_all.csv.dvc  1d_edges_static.csv.dvc  1d_nodes_dynamic_all.csv.dvc  1d_nodes_static.csv.dvc  2d_edge_index.csv.dvc  2d_edges_dynamic_all.csv.dvc  2d_edges_static.csv.dvc  2d_nodes_dynamic_all.csv.dvc  2d_nodes_static.csv.dvc  sample_submission.csv.dvc  test_1d2d_connections.csv.dvc  test_1d_edge_index.csv.dvc  test_1d_edges_dynamic_all.csv.dvc  test_1d_edges_static.csv.dvc  test_1d_nodes_dynamic_all.csv.dvc  test_1d_nodes_static.csv.dvc  test_2d_edge_index.csv.dvc  test_2d_edges_dynamic_all.csv.dvc  test_2d_edges_static.csv.dvc  test_2d_nodes_dynamic_all.csv.dvc  test_2d_nodes_static.csv.dvc  test_timesteps.csv.dvc  timesteps.csv.dvc
plots/mlflow/infer/652a0efb2e7246dda2f3545d194e21eb/: final_metrics.csv
plots/mlflow/infer/955cdb682e674b59880af6f3796ba420/: final_metrics.csv
urban_flood_modeling/: __init__.py  config.py  infer.py  train.py
urban_flood_modeling/callbacks/: __init__.py  infer_callbacks.py  train_callbacks.py
urban_flood_modeling/model/: __init__.py  model.py
urban_flood_modeling/modules/: __init__.py  datamodules.py  dataset.py  io.py  lightning_module.py  preprocessing.py
urban_flood_modeling/utils/: __init__.py  get_git_commit.py  io.py  preprocessing.py
(+2 files in other folders)
