[project]
name = "urban-flood-modeling"
version = "0.1.0"
description = "MLOPS package for UrbanFloodBench: Flood Modelling (Kaggle)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Levon Asatryan", email = "asatryan.levon@gmail.com" }]

dependencies = [
  "numpy>=2.4.1",
  "pandas>=2.3.3",
  "scikit-learn>=1.8.0",
  "scipy>=1.16.3",
  "tqdm>=4.67.1",
  "torch>=2.9.1",
  "pytorch-lightning>=2.6.0",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "mlflow>=3.8.0",
  "matplotlib>=3.10.8",
  "rich>=14.2.0",
]

[dependency-groups]
dev = ["fire>=0.7.1", "pre-commit>=4.5.1", "ruff>=0.15.1", "dvc[s3]>=3.65.0"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  ".dvc/cache",
  ".dvc/tmp",
]

line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  "W",
  # Pyflakes
  "F",
  # isort
  "I",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # flake8-return
  "RET",
  # flynt
  "FLY",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"


# [project.scripts]
# urban_flood_modeling = "urban_flood_modeling.commands:main"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["urban_flood_modeling"]
